
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int u32 ;
struct pinctrl_dev {int dummy; } ;
struct owl_pingroup {int dummy; } ;
struct owl_pinctrl {TYPE_1__* soc; } ;
struct TYPE_2__ {struct owl_pingroup* groups; } ;


 int owl_group_pinconf_reg (struct owl_pingroup const*,unsigned int,int *,int *,int *) ;
 int owl_group_pinconf_val2arg (struct owl_pingroup const*,unsigned int,int *) ;
 int owl_read_field (struct owl_pinctrl*,int ,int ,int ) ;
 unsigned long pinconf_to_config_packed (unsigned int,int ) ;
 unsigned int pinconf_to_config_param (unsigned long) ;
 struct owl_pinctrl* pinctrl_dev_get_drvdata (struct pinctrl_dev*) ;

__attribute__((used)) static int owl_group_config_get(struct pinctrl_dev *pctrldev,
    unsigned int group,
    unsigned long *config)
{
 const struct owl_pingroup *g;
 struct owl_pinctrl *pctrl = pinctrl_dev_get_drvdata(pctrldev);
 unsigned int param = pinconf_to_config_param(*config);
 u32 reg, bit, width, arg;
 int ret;

 g = &pctrl->soc->groups[group];

 ret = owl_group_pinconf_reg(g, param, &reg, &bit, &width);
 if (ret)
  return ret;

 arg = owl_read_field(pctrl, reg, bit, width);

 ret = owl_group_pinconf_val2arg(g, param, &arg);
 if (ret)
  return ret;

 *config = pinconf_to_config_packed(param, arg);

 return ret;

}
